# opencv-demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project.md
config/: hik_camera.conf
config-vscode/: launch.json  tasks.json
include/: HikDriver.hpp  ImgHandler.hpp  utils.hpp
src/: HikDriver.cpp  ImgHandler.cpp  main.cpp  utils.cpp
